<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingStart="@dimen/doublDefaultPadding"
    android:paddingEnd="@dimen/doublDefaultPadding"
    tools:context=".activities.SignUpEnfermeroActivity">

    <TextView
        android:id="@+id/lblFaltaPocoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ya falta poco..."
        android:textAlignment="center"
        android:textSize="@dimen/importantText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEstudios"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/estudios_hint"
        app:layout_constraintTop_toBottomOf="@id/lblFaltaPocoMessage"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCentroEstudios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtColegiatura"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultPadding"
        android:hint="@string/colegiatura_hint"
        app:layout_constraintTop_toBottomOf="@id/txtEstudios"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etColegiatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEspecialidad"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/especialidad_hint"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtColegiatura">

        <AutoCompleteTextView
            android:id="@+id/dropdownEspecialidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtGrado"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/grado_hint"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEspecialidad">

        <AutoCompleteTextView
            android:id="@+id/dropdownGrados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtExperienciaEnfermero"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/experiencia_hint"
        app:layout_constraintTop_toBottomOf="@id/txtGrado"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etExperienciaEnfermero"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="text|textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doublDefaultPadding"
        android:text="Finalizar"
        app:layout_constraintTop_toBottomOf="@id/txtExperienciaEnfermero"
        tools:layout_editor_absoluteX="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>