<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetalleEnfermeroPostulanteFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivEnfermeroDEP"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNombreEnfermeroDEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivEnfermeroDEP"
                tools:text="Nombre Enfermero" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreEnfermeroDEP"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clInDEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvCenEstDEP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/centro_dep"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvGrdDEP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grado_dep"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tvCenEstDEP"
                        app:layout_constraintTop_toTopOf="@+id/tvGradoDEP" />

                    <TextView
                        android:id="@+id/tvEspcDEP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/especialidad_dep"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tvGrdDEP"
                        app:layout_constraintTop_toTopOf="@+id/tvEspecialidadDEP" />

                    <TextView
                        android:id="@+id/tvExpDEP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/experiencia_dep"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tvCntctDEP"
                        app:layout_constraintTop_toTopOf="@+id/tvExperienciaDEP" />

                    <TextView
                        android:id="@+id/tvCntctDEP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contacto_dep"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tvEspcDEP"
                        app:layout_constraintTop_toTopOf="@+id/tvContactoDEP" />

                    <TextView
                        android:id="@+id/tvCentroEstudiosDEP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvCenEstDEP"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="estudios" />

                    <TextView
                        android:id="@+id/tvGradoDEP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toEndOf="@+id/tvGrdDEP"
                        app:layout_constraintTop_toBottomOf="@+id/tvCentroEstudiosDEP"
                        tools:text="grado" />

                    <TextView
                        android:id="@+id/tvEspecialidadDEP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvEspcDEP"
                        app:layout_constraintTop_toBottomOf="@+id/tvGradoDEP"
                        tools:text="especialidad" />

                    <TextView
                        android:id="@+id/tvContactoDEP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toEndOf="@+id/tvCntctDEP"
                        app:layout_constraintTop_toBottomOf="@+id/tvEspecialidadDEP"
                        tools:text="contacto" />

                    <TextView
                        android:id="@+id/tvExperienciaDEP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvExpDEP"
                        app:layout_constraintTop_toBottomOf="@+id/tvContactoDEP"
                        tools:text="experiencia" />

                    <Button
                        android:id="@+id/btnContratarDEP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:text="@string/btn_contratar_dep"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvExperienciaDEP" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>